# kalman_filter_imu_2baro

./: airbrake_control.cpp  compile_commands.json  platformio.ini
.cache/clangd/index/: AlignedBox.h.1C7FE4D17AE54A9F.idx  AngleAxis.h.F82ACB9A3FD7B02F.idx  ArduinoEigenCommon.h.068282BA1D059C75.idx  ArduinoEigenDense.h.018EA2FBC619EADE.idx  ArduinoEigenExtension.h.BB2724A40C3E0EB2.idx  ArithmeticSequence.h.2C9EFEAB1057779B.idx  Array.h.B75C277F4171BC65.idx  ArrayBase.h.BB6A586B800AE349.idx  ArrayCwiseBinaryOps.h.1EC3AD4E83483160.idx  ArrayCwiseUnaryOps.h.9CB816CBBA2E1A17.idx  ArrayWrapper.h.3F5AA62FDBF5BCB7.idx  ArxTypeTraits.h.A8CCD6263EB2A1BD.idx  Assign.h.EE4F7E0514DFDB54.idx  AssignEvaluator.h.538784A05489E99C.idx  AssignmentFunctors.h.0A88E04857FBD0AA.idx  BDCSVD.h.B654F5FEECA1EE2E.idx  BFloat16.h.5C12FDF757CA56AF.idx  BandMatrix.h.FC0D41373E1F73B5.idx  BinaryFunctors.h.F09B27AA86EAE5FD.idx  BlasUtil.h.30708CA7F8C77C6C.idx  Block.h.E0A11AE46CCED94B.idx  BlockHouseholder.h.19587C7CFB8B28AF.idx  BlockMethods.h.2E9CB419FBCA07BD.idx  BooleanRedux.h.EF8460C7343400A0.idx  Cholesky.667BB42AD7F5531B.idx  ColPivHouseholderQR.h.726B91B861328AD7.idx  CommaInitializer.h.AFFE32FDFFA58EA6.idx  CommonCwiseBinaryOps.h.9B31A4479ED32C07.idx  CommonCwiseUnaryOps.h.EAC019E1BA98EA42.idx  CompleteOrthogonalDecomposition.h.0DB4D77EE65A6FC4.idx  ComplexEigenSolver.h.6A9D01A584424EB1.idx  (+167 more)
lib/Kalmanfilter_altimeter_vario-master/: KalmanFilter.cpp  KalmanFilter.h
lib/MyKalmanLib/: CMakeLists.txt  library.json
lib/MyKalmanLib/include/my_kalman/: kf_base.hpp
src/: main-test.cpp  main.cpp
